# LocateAnything-SDK-S100-S600

./: .gitignore  AUTHORS  LICENSE  README.md  README.zh-CN.md
baselines/qwen2_5_vl/: README.md
docs/: BUILD_STATUS.md  CALIBRATION.md  COMPILER_PORTING_GUIDE.zh-CN.md  KNOWN_ISSUES.md  README.md  RUNTIME_ARCHITECTURE.md  SOURCE_REVIEW.md
docs/archive/: DEPLOYMENT.legacy.md  DEPLOYMENT.zh-CN.legacy.md
docs/tutorials/: LOCATEANYTHING_COMPILATION.md  QWEN2_5_VL_BASELINE.md  S600_RUNTIME.md
main/: README.md
main/language/tokenizer/: tokenizer_config.json
main/runtime/: .gitignore  CMakeLists.txt  run_locateanything_demo.sh
main/runtime/demo/: CMakeLists.txt  locateanything_3b_config.json  locateanything_demo.cc
main/runtime/docs/: INFERENCE_FLOW.md
main/runtime/example/: attention_mask_test.cpp  position_ids_test.cpp  vision_dummy_test.cpp
main/runtime/include/locateanything_runtime/: attention_mask.hpp  position_ids.hpp
main/runtime/reference/HB_HBMRuntime/: CMakeLists.txt  HBMRuntimeBinding.cc  HB_HBMRuntime.cc  HB_HBMRuntime.hpp  HB_RuntimeUtils.cc  HB_RuntimeUtils.hpp  README.upstream.md
main/runtime/src/: attention_mask.cpp  hbm_session.cpp  position_ids.cpp
main/scripts/: compile_locateanything_language.sh  compile_locateanything_vit.sh  watchdog_locateanything_vit.sh
toolchain/leap_llm/models/locateanything/: text_model_leap.py  vision_model_leap.py
toolchain/leap_llm/models/locateanything/blocks/: text_attention_leap.py  vision_block_leap.py  vision_patch_merger_leap.py
